[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Henry Sun <henryme2002830@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {extras = ["ext"], version = "^20.5"}
sanic = {extras = ["ext"], version = "^23.6.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
